--- a/index.html
+++ b/index.html
@@ -1,7 +1,40 @@
 <!DOCTYPE html>
 <html>
+<head>
+  <title>Random Background Color</title>
+  <style>
+    body {
+      text-align: center;
+      margin-top: 100px;
+      font-family: Arial, sans-serif;
+      background-color: #f1f1f1;
+    }
+    
+    .container {
+      margin-bottom: 20px;
+    }
+    
+    .button {
+      padding: 10px 20px;
+      font-size: 18px;
+      background-color: #4CAF50;
+      color: white;
+      border: none;
+      cursor: pointer;
+    }
+  </style>
+</head>
 <body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
+  <div class="container">
+    <button class="button" onclick="changeBackgroundColor()">Change Background Color</button>
+  </div>
+
+  <script>
+    function changeBackgroundColor() {
+      var colors = ['#ff0000', '#00ff00', '#0000ff', '#ffff00', '#ff00ff', '#00ffff'];
+      var randomColor = colors[Math.floor(Math.random() * colors.length)];
+      document.body.style.backgroundColor = randomColor;
+    }
+  </script>
 </body>
 </html>
