--- a/index.html
+++ b/index.html
@@ -1,10 +1,23 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Metric Dimension of a Graph</title>
-  <link rel="stylesheet" type="text/css" href="styles.css">
+  <title>D3.js Graph Theory Graph</title>
+  <script src="https://d3js.org/d3.v6.min.js"></script>
+  <style>
+    .node {
+      fill: steelblue;
+      stroke: #e99f9f;
+    }
+
+    .link {
+      fill: none;
+      stroke: #ccc;
+      stroke-width: 1.5px;
+    }
+  </style>
 </head>
 <body>
-  <!-- Your content here -->
+  <svg id="graph" width="400" height="300"></svg>
+  <script src="graph.js"></script>
 </body>
 </html>
