--- a/index.html
+++ b/index.html
@@ -18,6 +18,6 @@
 </head>
 <body>
   <svg id="graph" width="400" height="300"></svg>
-  <script src="graph.js"></script>
+  <script src="script.js"></script>
 </body>
 </html>
