--- a/index.html
+++ b/index.html
@@ -4,9 +4,19 @@
   <title>D3.js Graph Theory Graph</title>
   <script src="https://d3js.org/d3.v6.min.js"></script>
   <style>
+    html,
+    body,
+    #graph {
+      width: 100%;
+      height: 100%;
+      margin: 0;
+      padding: 0;
+      overflow: hidden;
+    }
+
     .node {
       fill: steelblue;
-      stroke: #e99f9f;
+      stroke: #fff;
     }
 
     .link {
@@ -17,7 +27,7 @@
   </style>
 </head>
 <body>
-  <svg id="graph" width="400" height="300"></svg>
+  <svg id="graph"></svg>
   <script src="script.js"></script>
 </body>
 </html>
