--- a/index.html
+++ b/index.html
@@ -1,33 +1,28 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>D3.js Graph Theory Graph</title>
+  <title>(Strong) Metric Dimension</title>
   <script src="https://d3js.org/d3.v6.min.js"></script>
-  <style>
-    html,
-    body,
-    #graph {
-      width: 100%;
-      height: 100%;
-      margin: 0;
-      padding: 0;
-      overflow: hidden;
-    }
-
-    .node {
-      fill: steelblue;
-      stroke: #fff;
-    }
-
-    .link {
-      fill: none;
-      stroke: #ccc;
-      stroke-width: 1.5px;
-    }
-  </style>
+  <link rel="stylesheet" type="text/css" href="styles.css">
 </head>
 <body>
-  <svg id="graph"></svg>
+  
+  <div class="container">
+    <svg id="graph" width="200" height="400">
+      <!-- SVG content here -->
+    </svg>
+    <p class="noteBoxes">Find the Metric Dimension of the Graph<br><br>Total Points: 0</p>
+    </div>
+      <div class="button-container">
+        <button class="bubble-button">Button 1</button>
+        <button class="bubble-button">Button 2</button>
+        <button class="bubble-button">Button 3</button>
+        <button class="bubble-button">Button 4</button>
+        <button class="bubble-button">Button </button>
+      </div>
+    </div>
+  </div>
+  
   <script src="script.js"></script>
 </body>
 </html>
