--- a/index.html
+++ b/index.html
@@ -11,14 +11,14 @@
     <svg id="graph" width="200" height="400">
       <!-- SVG content here -->
     </svg>
-    <p class="noteBoxes">Find the Metric Dimension of the Graph<br><br>Total Points: 0</p>
+    <p class="noteBoxes">Find the Metric Dimension of the Graph<br>Total Points: 0</p>
     </div>
       <div class="button-container">
-        <button class="bubble-button">Button 1</button>
-        <button class="bubble-button">Button 2</button>
-        <button class="bubble-button">Button 3</button>
-        <button class="bubble-button">Button 4</button>
-        <button class="bubble-button">Button </button>
+        <button class="bubble-button", id="0" onclick="handleClick(0)">1</button>
+        <button class="bubble-button"id="1"onclick="handleClick(1)">8</button>
+        <button class="bubble-button"id="2"onclick="handleClick(2)">13</button>
+        <button class="bubble-button"id="3"onclick="handleClick(3)">3</button>
+        <button class="bubble-button" id="4" onclick="handleClick(4)">5</button>
       </div>
     </div>
   </div>
